[gd_scene load_steps=29 format=3 uid="uid://d3u0chmjjfa7s"]

[ext_resource type="Script" uid="uid://nwqx8s3opd8m" path="res://GUI/player_hud/player_hud.gd" id="1_loiu6"]
[ext_resource type="Texture2D" uid="uid://b8tfeeopjphxi" path="res://GUI/player_hud/gui-health.png" id="2_ecbuc"]
[ext_resource type="PackedScene" uid="uid://b43yya5yg2c6m" path="res://GUI/player_hud/heart_gui.tscn" id="3_dtpa4"]
[ext_resource type="Texture2D" uid="uid://cmln4ri2adw8e" path="res://Player/Sprites/ZeShuriken.png" id="4_ea3vn"]
[ext_resource type="FontFile" uid="uid://bgmcsqabv8qwi" path="res://FutureAssests/DungeonFont.ttf" id="4_mqu0o"]
[ext_resource type="Texture2D" uid="uid://dw2yayeip8q12" path="res://GUI/player_hud/boss-hp.png" id="5_1jeqg"]
[ext_resource type="Texture2D" uid="uid://b28gk7kynf0np" path="res://Player/Sprites/ability-icons.png" id="5_3m3x0"]
[ext_resource type="Texture2D" uid="uid://rajccyeg2r2h" path="res://GUI/player_hud/panel_notification.png" id="6_q8jci"]
[ext_resource type="Script" uid="uid://bwwj5m2yiuhau" path="res://GUI/player_hud/notification.gd" id="6_qrqr1"]
[ext_resource type="FontFile" uid="uid://bm8wps6kvpwh4" path="res://GUI/Fonts/m5x7.ttf" id="7_467n6"]
[ext_resource type="AudioStream" uid="uid://xpgw6vvufltn" path="res://GUI/player_hud/notification.wav" id="9_tj3s2"]

[sub_resource type="Gradient" id="Gradient_scbx3"]
offsets = PackedFloat32Array(0, 0.617241, 1)
colors = PackedColorArray(1, 0.965321, 0.63153, 1, 1, 0.746, 0.237, 0.544, 1, 0.209, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_terqw"]
gradient = SubResource("Gradient_scbx3")
width = 24
height = 24
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_5nb4v"]
atlas = ExtResource("4_ea3vn")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1kye"]
atlas = ExtResource("5_3m3x0")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5viu"]
atlas = ExtResource("5_3m3x0")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ki6p8"]
atlas = ExtResource("5_3m3x0")
region = Rect2(0, 0, 32, 32)

[sub_resource type="FontVariation" id="FontVariation_6k8ot"]
base_font = ExtResource("4_mqu0o")
spacing_glyph = 1
spacing_space = 5
spacing_top = 1

[sub_resource type="Animation" id="Animation_u63or"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeToBlack:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(273.5, 124.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("VBoxContainer:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(257, 161)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("VBoxContainer:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Label:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_sachx"]
resource_name = "fade_to_black"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeToBlack:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(273.5, 124.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("VBoxContainer:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(257, 161)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("VBoxContainer:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Label:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_xt4a7"]
resource_name = "show_game_over"
length = 4.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeToBlack:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(3, 4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(273.5, 130), Vector2(273.5, 124.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("VBoxContainer:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(3, 4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(257, 149), Vector2(257, 161)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("VBoxContainer:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(3, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Label:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(3, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xfivr"]
_data = {
&"RESET": SubResource("Animation_u63or"),
&"fade_to_black": SubResource("Animation_sachx"),
&"show_game_over": SubResource("Animation_xt4a7")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_w0hju"]
atlas = ExtResource("5_1jeqg")
region = Rect2(9, 40, 14, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_81j23"]
atlas = ExtResource("5_1jeqg")
region = Rect2(40, 40, 15, 15)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yerqq"]
content_margin_left = 12.0
content_margin_top = 12.0
content_margin_right = 6.0
content_margin_bottom = 12.0
texture = ExtResource("6_q8jci")
texture_margin_left = 18.0
texture_margin_top = 18.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="Animation" id="Animation_kxh8n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(5, 5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_kiati"]
resource_name = "show_notification"
length = 3.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 2.6, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(5, 0), Vector2(5, 5), Vector2(5, 5), Vector2(5, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 2.6, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../AudioStreamPlayer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("9_tj3s2")
}],
"times": PackedFloat32Array(0)
}
tracks/3/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nwdhr"]
_data = {
&"RESET": SubResource("Animation_kxh8n"),
&"show_notification": SubResource("Animation_kiati")
}

[node name="PlayerHud" type="CanvasLayer"]
layer = 2
script = ExtResource("1_loiu6")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_right = 9.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Sprite2D" type="Sprite2D" parent="Control"]
position = Vector2(538, 13)
texture = ExtResource("2_ecbuc")
region_enabled = true
region_rect = Rect2(29, 0, 34, 8)

[node name="HFlowContainer" type="HFlowContainer" parent="Control"]
layout_mode = 0
offset_left = 472.0
offset_top = 21.0
offset_right = 602.0
offset_bottom = 45.0
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 2
alignment = 1

[node name="Heart" parent="Control/HFlowContainer" instance=ExtResource("3_dtpa4")]
layout_mode = 2

[node name="Heart2" parent="Control/HFlowContainer" instance=ExtResource("3_dtpa4")]
layout_mode = 2

[node name="Heart3" parent="Control/HFlowContainer" instance=ExtResource("3_dtpa4")]
layout_mode = 2

[node name="Heart4" parent="Control/HFlowContainer" instance=ExtResource("3_dtpa4")]
layout_mode = 2

[node name="Heart5" parent="Control/HFlowContainer" instance=ExtResource("3_dtpa4")]
layout_mode = 2

[node name="Heart6" parent="Control/HFlowContainer" instance=ExtResource("3_dtpa4")]
layout_mode = 2

[node name="Heart7" parent="Control/HFlowContainer" instance=ExtResource("3_dtpa4")]
layout_mode = 2

[node name="Heart8" parent="Control/HFlowContainer" instance=ExtResource("3_dtpa4")]
layout_mode = 2

[node name="Heart9" parent="Control/HFlowContainer" instance=ExtResource("3_dtpa4")]
layout_mode = 2

[node name="Heart10" parent="Control/HFlowContainer" instance=ExtResource("3_dtpa4")]
layout_mode = 2

[node name="Heart11" parent="Control/HFlowContainer" instance=ExtResource("3_dtpa4")]
layout_mode = 2

[node name="Heart12" parent="Control/HFlowContainer" instance=ExtResource("3_dtpa4")]
layout_mode = 2

[node name="Heart13" parent="Control/HFlowContainer" instance=ExtResource("3_dtpa4")]
layout_mode = 2

[node name="Heart14" parent="Control/HFlowContainer" instance=ExtResource("3_dtpa4")]
layout_mode = 2

[node name="Heart15" parent="Control/HFlowContainer" instance=ExtResource("3_dtpa4")]
layout_mode = 2

[node name="Heart16" parent="Control/HFlowContainer" instance=ExtResource("3_dtpa4")]
layout_mode = 2

[node name="Heart17" parent="Control/HFlowContainer" instance=ExtResource("3_dtpa4")]
layout_mode = 2

[node name="Heart18" parent="Control/HFlowContainer" instance=ExtResource("3_dtpa4")]
layout_mode = 2

[node name="Heart19" parent="Control/HFlowContainer" instance=ExtResource("3_dtpa4")]
layout_mode = 2

[node name="Heart20" parent="Control/HFlowContainer" instance=ExtResource("3_dtpa4")]
layout_mode = 2

[node name="Abilities" type="Control" parent="Control"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Abilities"]
layout_mode = 0
offset_left = -2.0
offset_top = 7.0
offset_right = 94.0
offset_bottom = 31.0
scale = Vector2(1.6, 1.6)
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="Control/Abilities/HBoxContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_terqw")

[node name="TextureRect" type="TextureRect" parent="Control/Abilities/HBoxContainer/TextureRect"]
texture_filter = 2
layout_mode = 0
offset_left = 3.0
offset_top = 4.0
offset_right = 35.0
offset_bottom = 36.0
scale = Vector2(0.5, 0.5)
texture = SubResource("AtlasTexture_5nb4v")
stretch_mode = 3

[node name="TextureRect2" type="TextureRect" parent="Control/Abilities/HBoxContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_terqw")

[node name="TextureRect" type="TextureRect" parent="Control/Abilities/HBoxContainer/TextureRect2"]
texture_filter = 2
offset_left = 3.0
offset_top = 4.0
offset_right = 35.0
offset_bottom = 36.0
scale = Vector2(0.5, 0.5)
texture = SubResource("AtlasTexture_e1kye")
stretch_mode = 3

[node name="TextureRect3" type="TextureRect" parent="Control/Abilities/HBoxContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_terqw")

[node name="TextureRect" type="TextureRect" parent="Control/Abilities/HBoxContainer/TextureRect3"]
texture_filter = 2
offset_left = 3.33333
offset_top = 4.0
offset_right = 35.3333
offset_bottom = 36.0
scale = Vector2(0.5, 0.5)
texture = SubResource("AtlasTexture_w5viu")
stretch_mode = 3

[node name="ArrowCountLabel" type="Label" parent="Control/Abilities/HBoxContainer/TextureRect3"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_top = 16.0
offset_right = 24.0
offset_bottom = 34.0
scale = Vector2(0.845, 0.845)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("7_467n6")
theme_override_font_sizes/font_size = 16
text = "99"
horizontal_alignment = 1

[node name="TextureRect4" type="TextureRect" parent="Control/Abilities/HBoxContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_terqw")

[node name="TextureRect" type="TextureRect" parent="Control/Abilities/HBoxContainer/TextureRect4"]
texture_filter = 2
offset_left = 3.0
offset_top = 4.0
offset_right = 35.0
offset_bottom = 36.0
scale = Vector2(0.5, 0.5)
texture = SubResource("AtlasTexture_ki6p8")
stretch_mode = 3

[node name="BombCountLabel" type="Label" parent="Control/Abilities/HBoxContainer/TextureRect4"]
unique_name_in_owner = true
offset_left = 0.916664
offset_top = 16.6667
offset_right = 24.9167
offset_bottom = 34.6667
scale = Vector2(0.845, 0.845)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("7_467n6")
theme_override_font_sizes/font_size = 16
text = "99"
horizontal_alignment = 1

[node name="GameOver" type="Control" parent="Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_right = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control/GameOver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.768627)

[node name="Label" type="Label" parent="Control/GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -55.5
offset_right = 43.0
offset_bottom = -32.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("FontVariation_6k8ot")
theme_override_font_sizes/font_size = 20
text = "Game Over"

[node name="VBoxContainer" type="VBoxContainer" parent="Control/GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.5
offset_top = -19.0
offset_right = 59.5
offset_bottom = 47.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContinueButton" type="Button" parent="Control/GameOver/VBoxContainer"]
layout_mode = 2
text = "continue"

[node name="TitleButton" type="Button" parent="Control/GameOver/VBoxContainer"]
layout_mode = 2
text = "back to title"

[node name="FadeToBlack" type="ColorRect" parent="Control/GameOver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_right = -2.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
mouse_default_cursor_shape = 1
color = Color(0, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/GameOver"]
libraries = {
&"": SubResource("AnimationLibrary_xfivr")
}

[node name="BossUI" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -9.0
offset_top = -361.0
offset_right = -7.0
offset_bottom = -311.0
grow_horizontal = 2
grow_vertical = 0

[node name="TextureProgressBar" type="TextureProgressBar" parent="Control/BossUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.0
offset_top = 4.0
offset_right = 130.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
value = 80.0
nine_patch_stretch = true
texture_under = SubResource("AtlasTexture_w0hju")
texture_progress = SubResource("AtlasTexture_81j23")

[node name="NinePatchRect" type="NinePatchRect" parent="Control/BossUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = -7.0
offset_right = 138.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_1jeqg")
region_rect = Rect2(0, 0, 64, 30)
patch_margin_left = 21
patch_margin_right = 24
axis_stretch_horizontal = 1

[node name="Label" type="Label" parent="Control/BossUI"]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -33.5
offset_top = 7.0
offset_right = 33.5
offset_bottom = 24.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.939233, 0.756932, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.203922)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("4_mqu0o")
text = "Boss Name"

[node name="Notifcation" type="Control" parent="Control"]
process_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
script = ExtResource("6_qrqr1")

[node name="PanelContainer" type="PanelContainer" parent="Control/Notifcation"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 249.0
offset_bottom = 63.0
theme_override_styles/panel = SubResource("StyleBoxTexture_yerqq")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Notifcation/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/Notifcation/PanelContainer/VBoxContainer"]
modulate = Color(1, 0.858824, 0.552941, 1)
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("4_mqu0o")
text = "Quest name  "
autowrap_mode = 2

[node name="Label2" type="Label" parent="Control/Notifcation/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_467n6")
text = "Quest message"
autowrap_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Notifcation"]
libraries = {
&"": SubResource("AnimationLibrary_nwdhr")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = &"SFX"
